- Fix encoding issue when exporting to midi on windows
- Fix tempo rounding issue

1.4.12
- Fix bug with time signature changes
- Fix potential crash
- Fix issue with unicode characters in track names

1.4.11
- Fix bug when recording drum tracks
- Fixed pitch bend on OSX when sending playback to external device
- Improve behavior when importing a MIDI file with invalid lyrics events
- Fix program change events on OSX when sending output to external device
- Fix importing program changes

1.4.10
- Enable looping a sub-portion of a song
- Add support for bank select controller
- Allow loop mode to keep on when invoking Aria with parameter "--reload"
- Fix beat display for uncommon time signatures (7/8, 8/8, 2/2, ...)
- Fix export bug when some controllers were used
- Fix note velocity when sending playback to external device on OSX
- Update tools look to be simpler and cleaner
- Other bugfixes

1.4.9
- Improve duplicate track settings feature
- Workaround event order issues
- Better handling when file open in Aria is moved/deleted in the file manager
- Fix pitch bend playback on windows
- Fix crash in drum editor
- Fix rendering bug in drum editor when collapsing sections

1.4.8
- Fix bug related to instrument changes
- Improve end of file detection
- Support for editing lyrics
- Correctly handle lyrics events when adding or deleting measures
- Allow deleting instrument through a contextual menu
- Preserve most recent controller values when deleting measures
- Metronome indicates starts of measures

1.4.7
- Fix for .MID and .MIDI files (upper-case extension)
- Workaround wxWidgets bug that caused spinners to disappear on OSX
- Allow navigating between notes with tab and shift-tab
- Now use FluidSynth and not TiMidity as MIDI synthesizer (Linux only)
- Reorganise preferences a bit
- Fix bug when deleting soloed track

1.4.6
- Add 'duplicate track' features
- Add 'recent files' menu
- Implement resizing notes with the mouse cursor