@@ -1,4 +1,5 @@
 - Fix encoding issue when exporting to midi on windows
+- Fix track name encoding
 - Fix tempo rounding issue
 
 1.4.12
